add: deactivate point api
