# docs/swagger.yaml
@@ -71,6 +71,34 @@ paths:
           description: Success
         '404':
           description: Member Not Found
+
+  /members/{memberId}/rewards:
+    get:
+      tags:
+        - member
+      summary: Fetch all reward entries for a specific member
+      parameters:
+        - name: memberId
+          in: path
+          required: true
+          schema: { type: integer }
+      responses:
+        '200':
+          description: Success
+  /member/{memberId}/point-category:
+    get:
+      tags:
+        - member
+      summary: Fetch each member's points by category
+      parameters:
+        - name: memberId
+          in: path
+          required: true
+          schema: { type: integer }
+      responses:
+        '200':
+          description: Success
+
   /rewards:
     get:
       tags:
@@ -100,47 +128,19 @@ paths:
           description: Entry Logged
         '422':
           description: Insufficient Balance for redemption
-  /members/{memberId}/rewards:
-    get:
-      tags:
-        - reward
-        - member
-      summary: Fetch tracking timeline for a specific account identity
-      parameters:
-        - name: memberId
-          in: path
-          required: true
-          schema: { type: integer }
-      responses:
-        '200':
-          description: Success
-  /member/{memberId}/point-category:
-    get:
-      tags:
-        - points
-        - member
-      summary: Fetch each member's points by category
-      parameters:
-        - name: memberId
-          in: path
-          required: true
-          schema: { type: integer }
-      responses:
-        '200':
-          description: Success
 
   /points:
     get:
       tags:
         - points
-      summary: List all points
+      summary: List all point types
       responses:
         200:
           description: Success
     post:
       tags:
         - points
-      summary: Create a point
+      summary: Create a new point type
       requestBody:
         required: true
         content:
@@ -184,5 +184,20 @@ paths:
       responses:
         '200':
           description: Point type activated
-        '204':
-          description: Point type already activate
+  /points/deactivate:
+    post:
+      tags:
+        - points
+      summary: Deactivate a point type
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [ point_type_id ]
+              properties:
+                point_type_id: { type: integer, example: 1 }
+      responses:
+        '200':
+          description: Point type deactivated
